--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,21 +1,20 @@
-
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body { 
-height: 1200px;
-background-image: url('http://blog.starsunflowerstudio.com/wp-content/uploads/2011/02/space_bokeh_background_awake_seamless_tile_pattern_pattterns_tiles.jpg');
-background-size: cover;
+	height: 1200px;
+	@include background($img-path, cover);
+	@media #{$break} {
+		width: 100%;
+    	text-align: center;
+	} 
 }
 
-
-
-
 .row {
-  white-space: nowrap;
-  overflow: hidden;  
-  border-radius: 2px;
+	white-space: nowrap; 
+	overflow: hidden;  
+	border-radius: 2px;
 }
 
  
