--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -1,18 +1,22 @@
-@import 'https://fonts.googleapis.com/css?family=Orbitron';
+@include font-face('Orbitron');
 
 
 
 body { 
-font-size: 18px;
-font-family: 'Orbitron';
+	font-family: $stack-orbitron;
+	@include text(18px);
 }
 
 .header {
-  text-align: center;
-  color: rgb(216, 197, 232);
+	@extend %centered;
+	color: $lavendar;
 }
 
 h1 {
-  font-size: 80px;
-  letter-spacing: 10px;
+	@include text(80px);
+	letter-spacing: 10px;
+	@media #{$break} {
+		@include text(40px);
+    	letter-spacing: 0px;
+	} 
 }
