--- a/css/application.css
+++ b/css/application.css
@@ -1,73 +1,2 @@
-@import "https://fonts.googleapis.com/css?family=Orbitron";
-* {
-  box-sizing: border-box; }
-
-body {
-  height: 1200px;
-  background-image: url("http://blog.starsunflowerstudio.com/wp-content/uploads/2011/02/space_bokeh_background_awake_seamless_tile_pattern_pattterns_tiles.jpg");
-  background-size: cover; }
-
-.row {
-  white-space: nowrap;
-  overflow: hidden;
-  border-radius: 2px; }
-
-.btn {
-  margin-right: 2px;
-  width: 100px;
-  color: white;
-  background-color: #1d2f3b; }
-
-.logo {
-  width: 50%;
-  margin-top: 10px;
-  border-radius: 50%; }
-
-body {
-  font-size: 18px;
-  font-family: 'Orbitron'; }
-
-.header {
-  text-align: center;
-  color: #d8c5e8; }
-
-h1 {
-  font-size: 80px;
-  letter-spacing: 10px; }
-
-.header {
-  margin: 0 auto 50px;
-  width: 50%; }
-
-.col-xs-6 {
-  padding-top: 25px;
-  padding-left: 20px;
-  height: 100%; }
-
-.col-xs-4 {
-  margin: auto;
-  height: 100%;
-  padding-top: 25px;
-  text-align: center; }
-
-.col-xs-2 {
-  margin: auto;
-  height: 100%; }
-
-.main {
-  margin: 0 auto;
-  width: 50%; }
-
-.row {
-  height: 80px;
-  margin-top: 10px; }
-
-.row:hover {
-  color: white;
-  background-color: rgba(152, 75, 69, 0.4); }
-
-.row {
-  background-color: rgba(205, 125, 127, 0.8);
-  transition: background-color .5s, color .5s; }
-
+@import url(https://fonts.googleapis.com/css?family=Orbitron);.header,.col-xs-4{text-align:center}.col-xs-6,.col-xs-4,.col-xs-2,.main{margin:auto;height:100%}.col-xs-6,.col-xs-4{padding-top:25px}.logo,.header,.main{width:50%}*{box-sizing:border-box}body{height:1200px;background-image:url(http://blog.starsunflowerstudio.com/wp-content/uploads/2011/02/space_bokeh_background_awake_seamless_tile_pattern_pattterns_tiles.jpg);background-size:cover}@media (max-width: 600px){body{width:100%;text-align:center}}.row{white-space:nowrap;overflow:hidden;border-radius:2px}.btn{margin-right:2px;width:100px;color:#fff;background-color:#1d2f3b}.btn:focus{outline:none}.logo{margin-top:10px;border-radius:50%}@media (max-width: 600px){.logo{width:100%}}body{font-family:"Orbitron",Helvetica,Arial,sans-serif;font-size:18px}.header{color:#d8c5e8}h1{font-size:80px;letter-spacing:10px}@media (max-width: 600px){h1{font-size:40px;letter-spacing:0px}}.header{margin:0 auto 50px}@media (max-width: 600px){.header{margin:auto;width:80%}}.col-xs-6{padding-left:20px}@media (max-width: 600px){.col-xs-2{padding-top:4%}}@media (max-width: 600px){.main{margin:auto;width:90%;text-align:center}}.row{height:80px;margin-top:10px}@media (max-width: 600px){ul{width:90%;text-align:center;margin:auto}}.row{background-color:rgba(205,125,127,0.8);transition:background-color .5s, color .5s}.row:hover{color:#fff;background-color:rgba(152,75,69,0.4)}
 /*# sourceMappingURL=application.css.map */
