--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,6 +1,11 @@
+
+
 .btn {
   margin-right: 2px;
   width: 100px;
-  color: white;
-  background-color: rgb(29, 47, 59);
+  color: $white;
+  background-color: $blue;
+  &:focus {
+  	outline: none;
+  }
 }
