--- a/scss/layout/_columns.scss
+++ b/scss/layout/_columns.scss
@@ -1,18 +1,20 @@
 
 .col-xs-6 {
-  padding-top: 25px;
+  @extend %position;
+  @extend %top;
   padding-left: 20px;
-  height: 100%;
 }
+ 
 
 .col-xs-4  {
-  margin: auto;
-  height: 100%;
-  padding-top: 25px; 
-  text-align: center;
+  @extend %position;
+  @extend %centered;
+  @extend %top;
 }
 
 .col-xs-2  {
-  margin: auto;
-  height: 100%;
+	@extend %position;
+	@media #{$break} {
+		padding-top: 4%;
+	}
 }
