--- a/scss/sass/_variables.scss
+++ b/scss/sass/_variables.scss
@@ -20,4 +20,4 @@ $stack-sans-serif	: Helvetica, Arial, sans-serif;
 $stack-orbitron		: 'Orbitron', $stack-sans-serif;
 
 //media queries
-$break				:  '(max-width: 600px)';
+$break-tablet		:  '(max-width: 850px)';
