--- a/css/application.css
+++ b/css/application.css
@@ -1,2 +1,114 @@
-@import url(https://fonts.googleapis.com/css?family=Orbitron);.header,.col-xs-4{text-align:center}.col-xs-6,.col-xs-4,.col-xs-2,.main{margin:auto;height:100%}.col-xs-6,.col-xs-4{padding-top:25px}.logo,.header,.main{width:50%}*{box-sizing:border-box}body{height:1200px;background-image:url(http://blog.starsunflowerstudio.com/wp-content/uploads/2011/02/space_bokeh_background_awake_seamless_tile_pattern_pattterns_tiles.jpg);background-size:cover}@media (max-width: 600px){body{width:100%;text-align:center}}.row{white-space:nowrap;overflow:hidden;border-radius:2px}.btn{margin-right:2px;width:100px;color:#fff;background-color:#1d2f3b}.btn:focus{outline:none}.logo{margin-top:10px;border-radius:50%}@media (max-width: 600px){.logo{width:100%}}body{font-family:"Orbitron",Helvetica,Arial,sans-serif;font-size:18px}.header{color:#d8c5e8}h1{font-size:80px;letter-spacing:10px}@media (max-width: 600px){h1{font-size:40px;letter-spacing:0px}}.header{margin:0 auto 50px}@media (max-width: 600px){.header{margin:auto;width:80%}}.col-xs-6{padding-left:20px}@media (max-width: 600px){.col-xs-2{padding-top:4%}}@media (max-width: 600px){.main{margin:auto;width:90%;text-align:center}}.row{height:80px;margin-top:10px}@media (max-width: 600px){ul{width:90%;text-align:center;margin:auto}}.row{background-color:rgba(205,125,127,0.8);transition:background-color .5s, color .5s}.row:hover{color:#fff;background-color:rgba(152,75,69,0.4)}
+@import url(https://fonts.googleapis.com/css?family=Orbitron);
+.header, .col-xs-4, .col-xs-2 {
+  text-align: center; }
+
+.col-xs-6, .col-xs-4, .col-xs-2, .main {
+  margin: auto;
+  height: 100%; }
+
+.col-xs-6, .col-xs-4 {
+  padding-top: 25px; }
+
+.header, .main {
+  width: 50%; }
+
+.col-xs-2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.logo {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0;
+  flex: 1 0;
+  -ms-flex-item-align: center;
+  align-self: center; }
+
+* {
+  box-sizing: border-box; }
+
+body {
+  height: 1200px;
+  background-image: url(http://blog.starsunflowerstudio.com/wp-content/uploads/2011/02/space_bokeh_background_awake_seamless_tile_pattern_pattterns_tiles.jpg);
+  background-size: cover; }
+  @media (max-width: 850px) {
+    body {
+      width: 100%;
+      text-align: center; } }
+
+.row {
+  white-space: nowrap;
+  overflow: hidden;
+  border-radius: 2px; }
+
+.btn {
+  margin-right: 2px;
+  width: 100px;
+  color: #fff;
+  background-color: #1d2f3b; }
+  .btn:focus {
+    outline: none; }
+
+.logo {
+  max-width: 90px;
+  max-height: 100%;
+  border-radius: 50%; }
+  @media (max-width: 850px) {
+    .logo {
+      width: 100%; } }
+
+body {
+  font-family: "Orbitron", Helvetica, Arial, sans-serif;
+  font-size: 18px; }
+
+.header {
+  color: #d8c5e8; }
+
+h1 {
+  font-size: 80px;
+  letter-spacing: 10px; }
+  @media (max-width: 850px) {
+    h1 {
+      font-size: 40px;
+      letter-spacing: 0px; } }
+
+.header {
+  margin: 0 auto 50px; }
+  @media (max-width: 850px) {
+    .header {
+      margin: auto;
+      width: 80%; } }
+
+.col-xs-6 {
+  padding-left: 20px; }
+
+.col-xs-2 {
+  justify-content: center; }
+
+@media (max-width: 850px) {
+  .main {
+    margin: auto;
+    width: 90%;
+    text-align: center; } }
+
+.row {
+  height: 80px;
+  margin-top: 10px; }
+
+@media (max-width: 850px) {
+  ul {
+    width: 90%;
+    text-align: center;
+    margin: auto; } }
+
+.row {
+  background-color: rgba(205, 125, 127, 0.8);
+  -webkit-transition: 0.5s background-color ease-in-out;
+  transition: 0.5s background-color ease-in-out;
+  -webkit-transition: 0.5s color ease-in-out;
+  transition: 0.5s color ease-in-out; }
+  .row:hover {
+    color: #fff;
+    background-color: rgba(152, 75, 69, 0.4); }
+
 /*# sourceMappingURL=application.css.map */
