--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -15,7 +15,7 @@ body {
 h1 {
 	@include text(80px);
 	letter-spacing: 10px;
-	@media #{$break} {
+	@media #{$break-tablet} {
 		@include text(40px);
     	letter-spacing: 0px;
 	} 
