--- a/scss/sass/_extends.scss
+++ b/scss/sass/_extends.scss
@@ -14,3 +14,17 @@
 %width {
 	width: 50%;
 }
+
+%displayflex {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+}
+
+%flex {
+	-webkit-box-flex: 1;
+	    -ms-flex: 1 0;
+	        flex: 1 0;
+	-ms-flex-item-align: center;
+  	    align-self: center;
+}
