--- a/app/scss/application.scss
+++ b/app/scss/application.scss
@@ -1,5 +1,4 @@
-@import 'sass/index';
-@import 'base/index';
-@import 'components/index';
-@import 'layout/index';
-@import 'animations/index';
+@import "variables.scss";
+@import "mixins.scss";
+@import "transitions.scss";
+@import "main.scss";
