--- a/app.css
+++ b/app.css
@@ -1,22 +1,12 @@
-@import url(https://fonts.googleapis.com/css?family=Orbitron);.header, .col-xs-4, .col-xs-2 {
-  text-align: center; }
-
-.col-xs-6, .col-xs-4, .col-xs-2, .main {
-  margin: auto;
-  height: 100%; }
-
-.col-xs-6, .col-xs-4 {
-  padding-top: 25px; }
-
-.header, .main {
-  width: 50%; }
-
-.logo {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 0;
-  flex: 1 0;
-  -ms-flex-item-align: center;
-  align-self: center; }
+@import url(https://fonts.googleapis.com/css?family=Orbitron);.row {
+  background-color: rgba(205, 125, 127, 0.8);
+  -webkit-transition: 0.5s background-color ease-in-out;
+  transition: 0.5s background-color ease-in-out;
+  -webkit-transition: 0.5s color ease-in-out;
+  transition: 0.5s color ease-in-out; }
+  .row:hover {
+    color: #fff;
+    background-color: rgba(152, 75, 69, 0.4); }
 
 * {
   box-sizing: border-box; }
@@ -29,95 +19,94 @@ body {
     body {
       width: 100%;
       text-align: center; } }
-
-.row {
-  white-space: nowrap;
-  overflow: hidden;
-  border-radius: 2px; }
-
-.btn {
-  margin-right: 2px;
-  width: 100px;
-  color: #fff;
-  background-color: #1d2f3b; }
-  .btn:focus, .btn:hover, .btn:active {
-    color: white;
-    outline: none; }
-
-.logo {
-  max-width: 90px;
-  max-height: 100%;
-  border-radius: 50%; }
-  @media (max-width: 850px) {
-    .logo {
-      width: 100%; } }
-
-body {
-  font-family: "Orbitron", Helvetica, Arial, sans-serif;
-  font-size: 18px; }
-
-.header {
-  color: #d8c5e8; }
-
-h1 {
-  font-size: 80px;
-  letter-spacing: 10px; }
-  @media (max-width: 850px) {
-    h1 {
-      font-size: 40px;
-      letter-spacing: 0px; } }
-
-.btn {
-  font-family: "Orbitron", Helvetica, Arial, sans-serif; }
-  .btn:focus, .btn:hover, .btn:active {
-    background: #2E6DA4;
-    outline: none !important;
-    color: white !important; }
-
-.header {
-  margin: 0 auto 50px; }
-  @media (max-width: 850px) {
-    .header {
-      margin: auto;
-      width: 80%; } }
-
-.col-xs-6 {
-  padding-left: 20px; }
-
-.col-xs-2 {
-  display: flex;
-  -webkit-box-direction: normal;
-  -webkit-box-orient: horizontal;
-  -webkit-flex-direction: row;
-  -moz-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-
-@media (max-width: 850px) {
-  .main {
-    margin: auto;
-    width: 90%;
-    text-align: center; } }
-
-.row {
-  height: 80px;
-  margin-top: 10px; }
-
-@media (max-width: 850px) {
-  ul {
-    width: 90%;
+  body .header {
+    margin: 0 auto 50px;
+    width: 50%;
+    font-family: "Orbitron", Helvetica, Arial, sans-serif;
+    font-size: 18px;
     text-align: center;
-    margin: auto; } }
-
-.row {
-  background-color: rgba(205, 125, 127, 0.8);
-  -webkit-transition: 0.5s background-color ease-in-out;
-  transition: 0.5s background-color ease-in-out;
-  -webkit-transition: 0.5s color ease-in-out;
-  transition: 0.5s color ease-in-out; }
-  .row:hover {
-    color: #fff;
-    background-color: rgba(152, 75, 69, 0.4); }
+    color: #d8c5e8; }
+    @media (max-width: 850px) {
+      body .header {
+        margin: auto;
+        width: 80%; } }
+    body .header h1 {
+      font-size: 80px;
+      letter-spacing: 10px;
+      font-family: "Orbitron", Helvetica, Arial, sans-serif; }
+      @media (max-width: 850px) {
+        body .header h1 {
+          font-size: 40px;
+          letter-spacing: 0px; } }
+  body .main {
+    margin: auto;
+    height: 100%;
+    width: 50%; }
+    @media (max-width: 850px) {
+      body .main {
+        margin: auto;
+        width: 90%;
+        text-align: center; } }
+    @media (max-width: 850px) {
+      body .main ul {
+        width: 90%;
+        text-align: center;
+        margin: auto; } }
+    body .main ul .btn {
+      margin-right: 2px;
+      width: 100px;
+      color: #fff;
+      background-color: #1d2f3b;
+      font-family: "Orbitron", Helvetica, Arial, sans-serif; }
+      body .main ul .btn:focus, body .main ul .btn:hover, body .main ul .btn:active {
+        color: white;
+        outline: none;
+        background: #2E6DA4;
+        outline: none !important;
+        color: white !important; }
+    body .main .row {
+      white-space: nowrap;
+      overflow: hidden;
+      border-radius: 2px;
+      height: 80px;
+      margin-top: 10px; }
+      body .main .row .col-xs-6 {
+        margin: auto;
+        height: 100%;
+        padding-top: 25px;
+        padding-left: 20px; }
+        body .main .row .col-xs-6 p, body .main .row .col-xs-6 a {
+          font-family: "Orbitron", Helvetica, Arial, sans-serif; }
+      body .main .row .col-xs-4 {
+        margin: auto;
+        height: 100%;
+        text-align: center;
+        padding-top: 25px; }
+        body .main .row .col-xs-4 p, body .main .row .col-xs-4 a {
+          font-family: "Orbitron", Helvetica, Arial, sans-serif; }
+      body .main .row .col-xs-2 {
+        display: flex;
+        -webkit-box-direction: normal;
+        -webkit-box-orient: horizontal;
+        -webkit-flex-direction: row;
+        -moz-flex-direction: row;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        text-align: center;
+        margin: auto;
+        height: 100%; }
+        body .main .row .col-xs-2 .logo {
+          -webkit-box-flex: 1;
+          -ms-flex: 1 0;
+          flex: 1 0;
+          -ms-flex-item-align: center;
+          align-self: center;
+          max-width: 90px;
+          max-height: 100%;
+          border-radius: 50%; }
+          @media (max-width: 850px) {
+            body .main .row .col-xs-2 .logo {
+              width: 100%; } }
