--- a/app.css
+++ b/app.css
@@ -47,6 +47,26 @@ body {
         margin: auto;
         width: 90%;
         text-align: center; } }
+    body .main .navbar {
+      display: flex;
+      margin: 0;
+      padding: 0;
+      list-style-type: none; }
+      body .main .navbar li {
+        width: 33%; }
+        body .main .navbar li button {
+          width: 100%;
+          height: 30px; }
+    body .main .error-window {
+      position: fixed;
+      top: 30%;
+      width: 700px;
+      margin-left: -350px;
+      color: white;
+      left: 50%;
+      text-align: center; }
+      body .main .error-window h2 {
+        font-family: "Orbitron", Helvetica, Arial, sans-serif; }
     @media (max-width: 850px) {
       body .main ul {
         width: 90%;
@@ -69,22 +89,27 @@ body {
       overflow: hidden;
       border-radius: 2px;
       height: 80px;
-      margin-top: 10px; }
-      body .main .row .col-xs-6 {
+      margin-top: 10px;
+      display: flex; }
+      body .main .row .stream-col {
         margin: auto;
         height: 100%;
-        padding-top: 25px;
-        padding-left: 20px; }
-        body .main .row .col-xs-6 p, body .main .row .col-xs-6 a {
-          font-family: "Orbitron", Helvetica, Arial, sans-serif; }
-      body .main .row .col-xs-4 {
+        padding-top: 15px;
+        padding-left: 20px;
+        width: 50%; }
+        body .main .row .stream-col p, body .main .row .stream-col a {
+          font-family: "Orbitron", Helvetica, Arial, sans-serif;
+          font-size: 20px; }
+      body .main .row .name-col {
         margin: auto;
         height: 100%;
         text-align: center;
-        padding-top: 25px; }
-        body .main .row .col-xs-4 p, body .main .row .col-xs-4 a {
-          font-family: "Orbitron", Helvetica, Arial, sans-serif; }
-      body .main .row .col-xs-2 {
+        padding-top: 15px;
+        width: 30%; }
+        body .main .row .name-col p, body .main .row .name-col a {
+          font-family: "Orbitron", Helvetica, Arial, sans-serif;
+          font-size: 20px; }
+      body .main .row .img-col {
         display: flex;
         -webkit-box-direction: normal;
         -webkit-box-orient: horizontal;
@@ -97,8 +122,9 @@ body {
         justify-content: center;
         text-align: center;
         margin: auto;
-        height: 100%; }
-        body .main .row .col-xs-2 .logo {
+        height: 100%;
+        width: 20%; }
+        body .main .row .img-col .logo {
           -webkit-box-flex: 1;
           -ms-flex: 1 0;
           flex: 1 0;
@@ -108,5 +134,5 @@ body {
           max-height: 100%;
           border-radius: 50%; }
           @media (max-width: 850px) {
-            body .main .row .col-xs-2 .logo {
+            body .main .row .img-col .logo {
               width: 100%; } }
